--- a/style.css
+++ b/style.css
@@ -164,6 +164,15 @@ html {
 .wrapper {
     padding: 2rem;
 }
+
+.formTest {
+    width:100%;
+    height:1px;
+    background-color: beige;
+    position: absolute;
+    top:55%;
+
+}
 /*WRAPPER RESPONSIVE****************************************/
 @media (min-width:400px) {
     .wrapper {
