--- a/style.css
+++ b/style.css
@@ -351,6 +351,11 @@ html {
     row-gap: 75px;
     width:70%;
 }
+@media (max-width:440px) {
+    .Parent {
+    width:100%;
+    }
+}
   
 .div1 { grid-area: 1 / 1 / 2 / 2; }
 .div2 { grid-area: 2 / 1 / 3 / 2; }
@@ -468,7 +473,7 @@ html {
 }
 @media (max-width:500px) {
     .projectsContainer {
-        padding: 0;
+        padding-right:0;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     }
@@ -495,6 +500,9 @@ html {
     .projectsCardHeader {
         padding:25px 0px 40px 10px;
         text-align: center;
+    }
+    .projectsCard {
+        margin: 2rem 0rem;
     }
 }
 
@@ -645,6 +653,10 @@ html {
         display: block;
     }
     .projectsImg img {
+        height:100%;
+        object-fit: cover;
+    }
+    .projectsImg .portfolioImg {
         height:100%;
         object-fit: cover;
     }
