Fixed add card bug
> Fixed the bug where a card could be made even if the input forms were left empty

--- a/Pages/WeatherApp/weatherApp.css
+++ b/Pages/WeatherApp/weatherApp.css
@@ -129,11 +129,8 @@ input {
     opacity: 70%;
 }
 
-.highlightVis, .highlightHumidity {
+.highlightVis, .highlightHumidity, .highlightRain,.highlightUV {
     padding-bottom: 50px;
-}
-
-.highlightUV {
     padding-bottom: 30px;
 }
 
@@ -215,6 +212,7 @@ input {
     .highlightRowOne, .highlightRowTwo {
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
     }
 }
 
