--- a/Pages/WeatherApp/weatherApp.css
+++ b/Pages/WeatherApp/weatherApp.css
@@ -166,7 +166,7 @@ input {
     position: absolute;
     top:60px;
     left:5px;
-    background-color: #fbdf4d;
+    background-color: Orange;
 }
     /*Ball bottom position*/
 .bot {
