--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ html {
 
 .contactTitle{
     color: var(--whiteColor);
-    font-size: clamp(3rem, 5vw, 5rem);
+    font-size: clamp(2.5rem, 5vw, 5rem);
     margin-bottom: 70px;
 }
 .contactTitleSmall {
@@ -744,6 +744,9 @@ html {
 .contactText {
     display: flex;
     flex-direction: column;
+}
+.contactText textarea {
+    font-size: clamp(1rem, 2vw, 4rem);
 }
 
 
